--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -12,7 +12,7 @@
 
 <div class="template-404 page-width page-margin center">
   <p>
-    {{ 'templates.404.subtext' | t }}
+   {% comment %} {{ 'templates.404.subtext' | t }} {% endcomment %} 404
   </p>
   <h1 class="title">
     {{ 'templates.404.title' | t }}
