--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -12,7 +12,7 @@
 
 <div class="template-404 page-width page-margin center">
   <p>
-   {% comment %} {{ 'templates.404.subtext' | t }} {% endcomment %} 404
+    {{ 'templates.404.subtext' | t }} 
   </p>
   <h1 class="title">
     {{ 'templates.404.title' | t }}
