--- a/sections/main-login.liquid
+++ b/sections/main-login.liquid
@@ -15,7 +15,7 @@
 {%- endstyle -%}
 
 <div class="customer login section-{{ section.id }}-padding">
-  <h1 id="recover" tabindex="-1">
+  <h1 id="recover" tabindex="-1" class="customer_login">
     {{ 'customer.recover_password.title' | t }}
   </h1>
   <div>
