--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -15,7 +15,7 @@
     {{ 'templates.404.subtext' | t }} --demo
   </p>
   <h1 class="title">
-    {{ 'templates.404.title' | t }}
+    {{ 'templates.404.title' | t }} --test
   </h1>
   <a href="{{ routes.all_products_collection_url }}" class="button">
     {{ 'general.continue_shopping' | t }}
